--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
 	</properties>
 	<dependencies>
 		<!-- Spring -->
+
+	<dependency>
+		<groupId>com.oracle.database.jdbc</groupId>
+		<artifactId>ojdbc11</artifactId>
+		<version>23.7.0.25.01</version>
+	</dependency>
+		
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
