--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,16 @@
 	</properties>
 	<dependencies>
 	
+	
+	<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+			<!-- file 업로드 -->
+			<dependency>
+			    <groupId>commons-fileupload</groupId>
+			    <artifactId>commons-fileupload</artifactId>
+			    <version>1.5</version>
+			</dependency>
+				
+	
 	<!-- mybatis  -->
 	<dependency>
 		<groupId>org.mybatis</groupId>
